--- a/WebContent/css/ranking_css/semi_rankingCss.css
+++ b/WebContent/css/ranking_css/semi_rankingCss.css
@@ -1,13 +1,30 @@
 /*랭킹 메인 페이지*/
 
+
+/*a 태그 inline-block*/
+a{
+display: inline-block;
+}
+
+
+
+#ranking_Top_Division_Line{
+	border-bottom: 1px solid #EAEAEA; /*#EAEAEA*/
+	width: 100px;
+	height: 20px;
+	margin-left: 30%;
+}
+
 #rankingTopName{/*랭킹 페이지 상단부 이름*/
 	color: #353866;
 }
 
 #line{/*랭킹 페이지 상단부 라인 (div)*/
-	border-bottom: 1px solid #EAEAEA;
-	padding-left: 5%;
+	/*border-bottom: 1px solid #EAEAEA;*/
+	/*padding-left: 5%;*/
+	text-align:center;
 }
+
 
 /*container-fluid로 설정시에 사용!*/
 /*#wrap{
@@ -19,8 +36,8 @@ height: 400px;
 padding-left: 10px;
 padding-right: 10px;
 text-align: center;
-background-color: yellow;
-/*border-top: 1px solid #EAEAEA;
+/*background-color: yellow;
+border-top: 1px solid #EAEAEA;
 border-right: 1px solid #EAEAEA;
 border-left: 1px solid #EAEAEA;*/
 }
@@ -69,7 +86,15 @@ border-left: 1px solid #EAEAEA;*/
 }
 
 #ranking_Division_Line{
-	border-bottom: 3px solid #EAEAEA;
-	width: 300px;
+	border-bottom: 3px solid #EAEAEA; /*#EAEAEA*/
+	width: 350px;
+	height: 20px;
+	margin-left: 35%;
 }
 
+
+#pre{
+	padding: 0px;
+	margin-bottom: 0px;
+	
+}
