--- a/WebContent/views/mainpage-header/main-header.html
+++ b/WebContent/views/mainpage-header/main-header.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/WebContent/css/reset.css">
-    <link rel="stylesheet" href="/WebContent/css/bootstrap.css">
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/bootstrap.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
@@ -122,7 +122,7 @@
                     </div>
 
                     <div class="col-md-2">
-                        <a class="nav-category" href="#" style="line-height:50px;">랭킹</a>
+                        <a class="nav-category" href="/views/ranking_page/ranking_main.jsp" style="line-height:50px;">랭킹</a>
                     </div>
 
                     <div class="col-md-2">
