0609_yj /commit_test

--- a/WebContent/css/noticePage_css/notice.css
+++ b/WebContent/css/noticePage_css/notice.css
@@ -7,26 +7,17 @@ padding: 0;
 	
 }
 
-#contents {	/*컨텐츠(공지사항)  */
-	background-color: white;
-}
+#contents {/* 	컨텐츠(공지사항)  */
+	background-color: black;
+} 
 
 #noticeTable{ /*공지사항 테이블  css */
 	text-align:center;
 
 }
-#noticeTable>thead>tr{/*공지사항 테이블 보더 css*/
- 	border-top-color:purple;
 
-}
 #notice_sub_tit{
 	font-size:15px;
-	
-	
 }
-a{
-	color:red;
-	text-decoration:none;
-	
-}
+
 
