--- a/WebContent/css/recipeList_css/recipeList.css
+++ b/WebContent/css/recipeList_css/recipeList.css
@@ -18,25 +18,27 @@
 
 #cate_list {
 	display: inline-block;
+	font-size: 12px;
+	
 }
 
 #cate_list>li {
 	display: inline-block;
 }
 
-.nav-link {
-	color: black;
-}
-
-#cate_list>li>a:hover {
+ #cate_list>li>a:hover {
 	color: #512772;
 	text-decoration: underline;
 	font-weight: bolder;
 }
-
+.nav-link.nonactive {
+	color: black;
+	padding: 0px 5px 0px 0px;
+}
 .nav-link.active {
 	text-decoration: underline;
 	color: #512772;
+	padding: 0px 5px 0px 0px;
 }
 
 .recipe_img {
