--- a/WebContent/css/ranking_css/semi_rankingCss2.css
+++ b/WebContent/css/ranking_css/semi_rankingCss2.css
@@ -2,15 +2,18 @@
 
 /*이미지*/
 #imgWrap{
-	width: 1050px;
-	height: 400px;
+/*	width: 1050px;
+	height: 400px;*/
+	width: 100%;
+	height: 100%;
 	
 }
 
 #cardImgs{
+/*	width: 100%;
+	height: 100%;*/
 	width: 100%;
 	height: 100%;
-	
 }
 
 
@@ -75,7 +78,17 @@
 
 #rankingNickName{
 	display: inline-block; 
-	margin-right: 20px; 
+	margin-right: 150px; 
 	margin-top: 5px;
 	color: #353866;
+}
+
+
+#tableContainer{
+	overflow: hidden;
+}
+
+#tableWrap{
+	width: 1050px;
+	overflow: hidden;
 }
