--- a/WebContent/css/mainPage_css/main.css
+++ b/WebContent/css/mainPage_css/main.css
@@ -1,4 +1,11 @@
 @charset "UTF-8";
+/* 폰트 */
+@import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
+
+/* 폰트 적용 */
+body{
+	font-family: "Nanum Gothic";
+}
 
 .side_menu_text {
 	text-decoration: none;
@@ -11,7 +18,7 @@
 	position: fixed;
 	float: left;
 	right: 0;
-	bottom: -2;
+	bottom: 2;
 	padding: 3;
 	z-index: 100;
 }
