--- a/WebContent/css/mainPage_css/main.css
+++ b/WebContent/css/mainPage_css/main.css
@@ -28,6 +28,12 @@ body{
 	z-index: 1;
 }
 
+@media ( max-width :1021px) {
+	#count_wrap{
+		display: none;
+	}
+}
+
 @media ( max-width :768px) {
 	#aside {
 		visibility: hidden;
