--- a/WebContent/css/mainPage_css/header.css
+++ b/WebContent/css/mainPage_css/header.css
@@ -11,7 +11,7 @@
 	background: -webkit-gradient(linear, center bottom, center top, from(#fff),
 		to(#fff));
 	padding: 0px;
-	left: 5px;
+	right: 0;
 	width: 100%;
 	transition-timing-function: linear;
 }
