--- a/WebContent/css/recipeList_css/recipeList.css
+++ b/WebContent/css/recipeList_css/recipeList.css
@@ -47,7 +47,7 @@
 	opacity: 1;
 	display: block;
 	width: 85%;
-	height: auto;
+	height: 250px;
 	transition: .5s ease;
 	backface-visibility: hidden;
     margin-left: auto;
@@ -99,4 +99,16 @@
 .btn.btn-secondary{
 	background-color: white !important;
 	color: black !important;
+}
+#pageNavi{
+	margin-left: auto;
+	margin-right: auto;
+}
+.page-item.active>.page-link{
+	background-color: #512772 !important;
+	border-color: #512772 !important;
+	color: white !important;
+}
+.page-item>.page-link{
+	color: #512772 !important;
 }
