--- a/WebContent/css/mainPage_css/main.css
+++ b/WebContent/css/mainPage_css/main.css
@@ -2,38 +2,58 @@
 
 /* 폰트 */
 @font-face {
-    font-family: IropkeBatang; // 사용할 폰트명
-    src: url('/fonts/IropkeBatangM.eot'); // eot 포맷
-    src: local(※), url('/fonts/IropkeBatangM.woff') format('woff'); // ie9이상은 woff 포맷 적용
+	font-family: IropkeBatang;
+	//
+	사용할
+	폰트명
+	src
+	:
+	url('/fonts/IropkeBatangM.eot');
+	//
+	eot
+	포맷
+	src
+	:
+	local(
+	※
+	)
+	,
+	url('/fonts/IropkeBatangM.woff')
+	format(
+	'woff'
+	);
+	//
+	ie9이상은
+	woff
+	포맷
+	적용
 }
 
 /* 미디어 쿼리 */
 /*622*/
-
 @media ( max-width :1802px) {
-	#count_div1{
+	#count_div1 {
 		display: none;
 	}
 }
 
 @media ( max-width :1198px) {
-	#category-text{
+	#category-text {
 		display: none;
 	}
 }
 
 @media ( max-width :1150px) {
-	#header-ani{
+	#header-ani {
 		display: none;
 	}
 }
 
 @media ( max-width :1021px) {
-	#count_wrap{
+	#count_wrap {
 		display: none;
 	}
 }
-
 
 @media ( max-width :768px) {
 	#aside {
@@ -58,19 +78,16 @@
 		width: 33%;
 		float: left;
 	}
-	
 }
 /* 미디어 쿼리 끝  */
 
 /* 전체 폰트 적용 */
-body{
+body {
 	font-family: 'IropkeBatang';
 }
 /* 폰트 적용 끝 */
-
-
-.contents #main-img-wrap{
-	height: 530px; 
+.contents #main-img-wrap {
+	height: 530px;
 	padding: 0px;
 }
 
@@ -96,42 +113,42 @@ body{
 }
 
 /* 호버 - 사진 클릭 효과 */
-#main_div_1 #main_img_1:hover{
+#main_div_1 #main_img_1:hover {
 	cursor: pointer;
 	opacity: 0.8;
 }
 
-#main_div_1 #main_img_2:hover{
+#main_div_1 #main_img_2:hover {
 	cursor: pointer;
 	opacity: 0.8;
 }
 
-#main_div_1 #main_img_3:hover{
+#main_div_1 #main_img_3:hover {
 	cursor: pointer;
 	opacity: 0.8;
 }
 
-#main_div_1 #main_img_4:hover{
+#main_div_1 #main_img_4:hover {
 	cursor: pointer;
 	opacity: 0.8;
 }
 
-#main_div_2 #main_img_2_1:hover{
+#main_div_2 #main_img_2_1:hover {
 	cursor: pointer;
 	opacity: 0.8;
 }
 
-#main_div_2 #main_img_2_2:hover{
+#main_div_2 #main_img_2_2:hover {
 	cursor: pointer;
 	opacity: 0.8;
 }
 
-#main_div_2 #main_img_2_3:hover{
+#main_div_2 #main_img_2_3:hover {
 	cursor: pointer;
 	opacity: 0.8;
 }
 
-#main_div_2 #main_img_2_4:hover{
+#main_div_2 #main_img_2_4:hover {
 	cursor: pointer;
 	opacity: 0.8;
 }
@@ -144,7 +161,7 @@ body{
 	background-color: #272727;
 	padding: 0px;
 	float: left;
-	margin-left: 5px; 
+	margin-left: 5px;
 	width: 60px;
 }
 
@@ -166,35 +183,33 @@ strong {
 }
 /* - 카운트 끝 */
 
-
 /* 인트로 부분 */
-#intro-wrap #intro-step{
-	border: 2px solid black; 
-	height: 200px; 
-	padding:0px;
+#intro-wrap #intro-step {
+	border: 2px solid black;
+	height: 200px;
+	padding: 0px;
 }
 
-#intro-wrap #intro-step #intro-step-wrap{
-	border:2px solid black; 
-	height:200px; 
-	float:left;
+#intro-wrap #intro-step #intro-step-wrap {
+	border: 2px solid black;
+	height: 200px;
+	float: left;
 }
 
-#intro-wrap #intro-step #intro-step-wrap div{
-	border:2px solid black; 
-	height:150px;
+#intro-wrap #intro-step #intro-step-wrap div {
+	border: 2px solid black;
+	height: 150px;
 }
 
-#intro-wrap #intro-step #intro-step-wrap p{
-	padding-top:10px;
+#intro-wrap #intro-step #intro-step-wrap p {
+	padding-top: 10px;
 }
 
-#intro-wrap button{
-	background-color:#512772; 
-	color:white;
+#intro-wrap button {
+	background-color: #512772;
+	color: white;
 }
 /* - 인트로 끝 */
-
 
 /* 타이틀 바 가운데 줄 */
 #title-header {
@@ -218,24 +233,86 @@ strong {
 /* - 끝 */
 
 /* 추천 이벤트 이미지 */
-#recommendEvent, #newFoods{
-	padding: 6px; 
+#recommendEvent, #newFoods {
+	padding: 6px;
 	padding-left: 0px;
 }
 /* - 추천 이벤트 이미지 끝 */
 
 /* MD 추천 */
-#md-wrap{
-	padding: 0px; 
+#md-wrap {
+	padding: 0px;
 	padding-bottom: 10px;
 }
 /* - MD 추천 끝 */
 
 /* 혜택 */
-#plus{
-	background-color: #f6f7f7; 
+#plus {
+	background-color: #f6f7f7;
 	padding: 0px;
 }
 
+/*	소스		*/
+/* .box {
+	width: 960px
+} */
 
+.height_auto {
+	height: auto;
+	overflow: hidden;
+}
 
+.vertical_motion {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+}
+
+.vertical_motion .vm_list {
+	float: left;
+	margin-right: 5px;
+	overflow: hidden;
+}
+
+.vertical_motion .vm_list img {
+	vertical-align: middle
+}
+
+.vertical_motion .vm_list.last {
+	margin-right: 0
+}
+
+.sp_box {
+	width: 300px;
+	height: 300px;
+	overflow: hidden;
+}
+
+.vertical_motion.s2 .sp_box {
+	width: 795px;
+	height: 100px;
+}
+
+.vertical_motion2 {
+	margin: 0;
+	padding: 0;
+}
+
+.vertical_motion2 .vm_list2 {
+	float: left;
+	margin-right: 5px;
+	overflow: hidden;
+}
+
+.vertical_motion2 .vm_list2 img {
+	vertical-align: middle
+}
+
+.vertical_motion2 .vm_list2.last {
+	margin-right: 0
+}
+
+.vertical_motion2 .sp_box {
+	width: 685px;
+}
+/* --- */
