--- a/WebContent/css/recipePage_css/recipeSelect.css
+++ b/WebContent/css/recipePage_css/recipeSelect.css
@@ -42,7 +42,8 @@
 #recipe-infoes{
 	background-color: white;
 }
-.row{
+#recipe-body{
 	background-color: white;
 	margin-bottom: 3%;
+	border-radius: 20px;
 }
