--- a/WebContent/css/ranking_css/semi_rankingCss.css
+++ b/WebContent/css/ranking_css/semi_rankingCss.css
@@ -152,3 +152,8 @@ border: 1px solid #EAEAEA;*/
 #wrapgradient{
 	background: linear-gradient(180deg, rgba(255,255,255,1) 17%, rgba(248,250,255,1) 32%);
 }
+
+/*
+#iframe{
+	overflow: auto;
+}*/
