--- a/WebContent/views/memberPage/membershipPage.html
+++ b/WebContent/views/memberPage/membershipPage.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html>
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html lang="ko">
 
 <head>
@@ -6,7 +8,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>회원가입</title>
-<link href="/css/bootstrap.min1.css" rel="stylesheet">
+<link href="/css/bootstrapJH.min.css" rel="stylesheet">
 <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
@@ -179,13 +181,15 @@ ul.filter>li h5 {
 	padding: 0 5px;
 }
 
-.desktop{
-        color: gray;
-        font-size: 17px;
-        font-weight: 400;
-        font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
-        background-color: white;
-    }
+.desktop {
+	color: gray;
+	font-size: 17px;
+	font-weight: 400;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+		"Helvetica Neue", Arial, sans-serif, "Apple Color Emoji",
+		"Segoe UI Emoji", "Segoe UI Symbol";
+	background-color: white;
+}
 
 #email font {
 	line-height: 35px;
@@ -209,6 +213,9 @@ ul.filter>li h5 {
 	text-align: right;
 	padding: 0;
 }
+
+#gender button{
+width:100px;}
 
 pre {
 	background: #f9f9f9;
@@ -1235,7 +1242,7 @@ pre {
 						</div>
 						<div class="col-md-3"></div>
 						<div class="col-md-6">
-							<form name="joinus" action="#" method="get">
+							
 								<ul class="filter">
 									<li class="line"><label>이메일</label>
 										<div>
@@ -1267,7 +1274,7 @@ pre {
 											</div>
 										</div></li>
 								</ul>
-							</form>
+							
 						</div>
 						<div class="col-md-3"></div>
 					</div>
@@ -1279,12 +1286,12 @@ pre {
 				</div>
 				<div class="col-md-12 member-join ghost" id="member-insert">
 					<h2>회원 정보 입력</h2>
-					<form action="" method="post" id="frm">
+					<form action="/insertMember" method="post" id="frm">
 						<div class="box">
 							<div class="col-md-3"></div>
 							<div class="col-md-6">
 								<div style="width: 90%; float: left">
-									
+
 									<div class="form-group">
 										<label for="userId">아이디</label> <input type="text"
 											class="form-control" id="userId" name="userId"
@@ -1313,8 +1320,9 @@ pre {
 									<div class="form-group">
 										<label for="birth">생년월일</label> <input type="text"
 											class="form-control" id="birth" name="birth"
-											onchange="birthCheck();" placeholder="생년월일" maxlength="6">
-										<label class="problem" id="birthProblem"></label>
+											onchange="birthCheck();" placeholder="생년월일 ex) 930707"
+											maxlength="6"> <label class="problem"
+											id="birthProblem"></label>
 									</div>
 									<div class="form-group">
 										<label for="phone">휴대폰</label><br> <select
@@ -1345,6 +1353,17 @@ pre {
 											class="form-control" /> <span id="guide" style="color: #999"></span>
 										<label class="problem" id="addressProblem"></label>
 
+									</div>
+									<div class="form-group">
+										<label for="userName">성별</label> <label class="problem"
+											id="genderProblem"></label>
+											<input type="hidden" id="hiddenGender" name="gender" />
+											<input type="hidden" id="hiddenEmail" name="email" />
+										<P>
+										<div class="btn-group" role="group" aria-label="..." id="gender">
+											<button type="button" class="btn btn-default" id="genderM">Men</button>
+											<button type="button" class="btn btn-default" id="genderF">Woman</button>
+										</div>
 									</div>
 
 								</div>
@@ -1465,7 +1484,7 @@ pre {
         var regExpEmailLast = /^[a-zA-Z0-9.-]+\.[a-zA-Z]{2,4}$/; // 이메일 주소
         var regExpEmail = /^[a-zA-Z0-9._-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,4}$/; //이메일 검사
         var emailCheckCode; // 생성된 인증번호
-    
+    	var hiddenEmail; //이메일 저장
     	function nextShow() {
             $('#phone').css("display", "block");
         }
@@ -1485,27 +1504,35 @@ pre {
         	
         	
         	
-            var email = $('#first_email').val() + "@" + $('#last_email').val();
+            hiddenEmail = $('#first_email').val() + "@" + $('#last_email').val();
             
-            if (email.match(regExpSpace)) {
+            if (hiddenEmail.match(regExpSpace)) {
             	alert("공백이 존재합니다.");
-            }else if (!regExpEmail.test(email)) {
+            }else if (!regExpEmail.test(hiddenEmail)) {
             	alert("알맞지 않는 이메일 형식입니다.")
             }else{
             
             	$('.emailCheck').show();
-                SetTime = 300; // 최초 설정 시간(기본 : 초)
-                $('#checkCount').show();
+            	SetTime = 300; // 최초 설정 시간(기본 : 초)
+            	$('#checkCount').show();
                 $('#checkBtn').hide();
                 
     			
                 $.ajax({
                     url: "/emailCheck",
-                    data: {email: email},
+                    data: {email: hiddenEmail},
                     type: "post",
                     success: function(data) {
                         console.log("성공");
-                        emailCheckCode = data;
+                        if(data=="1"){
+                        alert("이미 가입한 이메일 입니다.");
+                        $('.emailCheck').hide();
+                        $('#checkCount').hide();
+                        $('#checkBtn').show();
+                        }else{
+                        	
+                        	emailCheckCode = data;
+                        }
                         
                     },
                     error: function() {
@@ -1520,13 +1547,13 @@ pre {
         
         
         function reEmailCheck() {
-        	 var email = $('#first_email').val() + "@" + $('#last_email').val();
+        	 hiddenEmail = $('#first_email').val() + "@" + $('#last_email').val();
         	 
         	
              
-        	 if (email.match(regExpSpace)) {
+        	 if (hiddenEmail.match(regExpSpace)) {
              	alert("공백이 존재합니다.");
-             }else if (!regExpEmail.test(email)) {
+             }else if (!regExpEmail.test(hiddenEmail)) {
              	alert("알맞지 않는 이메일 형식입니다.")
              }else{
              
@@ -1537,7 +1564,7 @@ pre {
      			
                  $.ajax({
                      url: "/emailCheck",
-                     data: {email: email},
+                     data: {email: hiddenEmail},
                      type: "post",
                      success: function(data) {
                          console.log("성공");
@@ -1564,6 +1591,7 @@ pre {
             if (SetTime < 0) { // 시간이 종료 되었으면..
                 //clearInterval(tid); // 타이머 해제
                 SetTime=1000;
+                //clearInterval(tid); // 타이머 해제
                 $('#checkCount').hide();
                 $('#reCheck').show();
                 alert("시간이 초과되었습니다. 다시 시도해주시기 바랍니다");
@@ -1575,6 +1603,10 @@ pre {
 
         $('#next-page').click(function() {
         	
+        	if($('#checkBar').css("display")=="none"){
+        		alert("이메일 인증을 완료하신 후 눌러주시기 바랍니다.");
+        	}
+        	
         	if($('#checkBar').val()==emailCheckCode){
         	
             $('#emailCheck').slideToggle();
@@ -1583,6 +1615,8 @@ pre {
             $('#btnBar2').hide();
             $('#hide-button2').show();
             $('#member-insert').show();
+            $('#hiddenEmail').val(hiddenEmail);
+            
         	}else{
         		alert("인증번호를 다시 확인해주시기 바랍니다.");
         	}
@@ -1666,13 +1700,41 @@ pre {
                     $('#remove-1').css("margin-bottom", "20px");
 
                 } else {
-                    $('#userId').css('border', '3px solid #00FF40');
-                    $('#ok-1').show();
-                    $('#remove-1').hide();
-                    $('#idProblem').hide();
+                	
+                	$.ajax({
+                        url: "/idCheck",
+                        data: {userId:$('#userId').val()},
+                        type: "post",
+                        success: function(data) {
+                            console.log("성공");
+                            if(data==1){
+                            	$('#userId').css('border', '3px solid red');
+                                $('#remove-1').show();
+                                $('#ok-1').hide();
+                                $('#idProblem').text("이미 사용중인 아이디입니다.");
+                                $('#idProblem').show();
+                                $('#remove-1').css("margin-bottom", "20px");
+                            }else{
+                            	  $('#userId').css('border', '3px solid #00FF40');
+                                  $('#ok-1').show();
+                                  $('#remove-1').hide();
+                                  $('#idProblem').hide();
+                            }
+                        },
+                        error: function() {
+                            console.log("실패");
+                        },
+                        complete: function() {
+                            //무조건 실행
+                        }
+                    });
+                	
+          
                 }
             }
         }
+        
+    
 
         function pwdCheck1() {
             $('#check2').css('visibility', 'visible');
@@ -1838,6 +1900,19 @@ pre {
             }
         }
         
+        
+        $('#genderM').click(function(){
+			 $('#hiddenGender').val("M");
+			 $('#genderM').css("background-color","#eeeeee");
+			 $('#genderF').css("background-color","white");
+		});
+        
+        $('#genderF').click(function(){
+        	$('#hiddenGender').val("F");
+			$('#genderF').css("background-color","#eeeeee");
+			$('#genderM').css("background-color","white");
+		});
+        
         function allCheck() {
             var success = 0;
             if ($('#userId').val() == ""&&$('#ok-1').css("display")=="none") {
@@ -1923,13 +1998,13 @@ pre {
             }
             
             if(success==8) {
-                $('#frm').submit
+                $('#frm').submit();
             }
         }
     </script>
 	<script
 		src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
+	<script src="/css/js/bootstrap.min.js"></script>
 </body>
 
 </html>
