--- a/WebContent/views/memberPage/membershipPage.html
+++ b/WebContent/views/memberPage/membershipPage.html
@@ -1,6 +1,4 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8"
-    pageEncoding="UTF-8"%>
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html lang="ko">
 
 <head>
@@ -2006,5 +2004,4 @@ pre {
 		src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<script src="/css/js/bootstrap.min.js"></script>
 </body>
-
 </html>
