--- a/WebContent/views/memberPage/loginPage.html
+++ b/WebContent/views/memberPage/loginPage.html
@@ -1,5 +1,3 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8"
-    pageEncoding="UTF-8"%>
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html lang="ko">
 
@@ -105,7 +103,7 @@ img {
 	<div class="container-fluid" style="padding: 0px;">
 
 		<!-- 해더 영역 -->
-		<div id="header"></div>
+		<!-- <div id="header"></div> -->
 		<!-- 헤더 영역 끝 -->
 
 		<!-- 컨텐츠 영역 -->
@@ -214,14 +212,11 @@ img {
     
     
     </div>
-    <!-- 푸터 -->
-				<div id="footer"
-					class="col-md-8 col-sm-12 mx-auto border-left-0 border-right-0"
-					style="border: 1px solid black; padding: 10px;"></div>
-		<!-- 푸터 끝 -->
-
-	<script
-		src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    
+    	<!-- 푸터 -->
+		<!-- <div id="footer" class="col-md-8 col-sm-12 mx-auto border-left-0 border-right-0" style="border: 1px solid black; padding: 10px;"></div> -->
+	
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
 </body>
 
