--- a/WebContent/views/recipePage/recipeEmpty.html
+++ b/WebContent/views/recipePage/recipeEmpty.html
@@ -24,6 +24,6 @@
 <span>- 검색어의 단어 수를 줄이거나, 다른 검색어로 검색해 보세요.</span><br>
 <span>- 더 일반적인 검색어로 다시 검색해 보세요.</span>
 </div>
-<div class="col-md-3"></div>
+<div class="col-md-3"></div><br><br>
 </body>
 </html>
